--- a/views/vote-confirm.ejs
+++ b/views/vote-confirm.ejs
@@ -21,18 +21,18 @@
                 <h1><span class="text-big">Elecciones 2020</span></h1>
                 <span>Sistema Digital de Votación <b>E-vote</b></span>
             </div>
+            <button class="cerrar_sesion" onclick=cerrar_sesion() style="background: #c22014;" >CERRAR SESIÓN</button>
         </div>
     </header>
     <main>
-        <!-- inicio formulario busqueda -->
+
         <div class="container">
-
-
-            <!--div class="formulario"-->
+            <div align="center" style="display: inline;">
+                <h2><strong>Usuario :</strong> <%= name %> </h2> 
+            </div>
             <form class="formulario" method="post" action="/confirm-vote" onsubmit="return validateForm()">
         
                 <input type="hidden" name="id_asistencia" value='<%= data.id_asistencia %>' />
-
                 <fieldset>
                     <legend>Emisión de Votación</legend>
                     <h1>ASAMBLEA UNIVERSITARIA</h1>
@@ -42,17 +42,13 @@
                             <input type="hidden" name="id_lista_asamblea" value='<%= data.lista_asamblea.id_lista_electoral %>' />
                             <input type="text" name="lista_asamblea" value='<%= data.lista_asamblea.nombre %>' disabled />
                         <%}%>
-                        
-                        
-
                     </div>
-
                 </fieldset>
 
                 <fieldset>
                     <legend>Emisión de Votación</legend>
                     <h1>CONSEJO DE FACULTAD</h1>
-                    <H3>FACULTAD DE PRODUCCION Y SERVICIOS</H3>
+                    <H3> <%= data.facultad_nombre %> </H3>
                     <div class="marcacion-voto" id="lista_consejo"> 
                         <% var status; %>
                         <%if(status == "confirm-vote"){%>
@@ -63,11 +59,9 @@
 
                 </fieldset>
                     <div align="center">
-                        
                         <a href='#' onclick='location.reload(true); return false;'>
                             <button class="boton-accion2" style="background: #c22014;" >CAMBIAR VOTO</button>
                         </a>
-                        
                         <button type="submit" class="boton-accion2" style="background: rgb(13, 129, 17);" >VOTAR</button>
                     </div>    
             </form>
@@ -79,45 +73,26 @@
 
 <script>
 
-    function enviar(){
-        //console.log("VAL CONSEJO: ",$('#lista_consejo').val());
-        //console.log($('input[name="lista_consejo"]:checked').val());
-        //$('input[name="name_of_your_radiobutton"]:checked').val()
+    function cerrar_sesion(){
+        Swal.fire({
+        title: 'Cerrar Sesión',
+        text: "¿Esta usted seguro que desea cerrar sesion?",
+        icon: 'warning',
+        showCancelButton: true,
+        reverseButtons: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'SI, CONFIRMAR'
+      }).then((result) => {
+        if (result.value) {
+            window.location.href = '/logout';
+        }
+      });
+
     }
 
-    $(document).ready(function() {
-        //alert("hello");
-        //init_list('lista_asamblea',1,null);
-        //init_list('lista_consejo',2,1);
-    });
-
     function validateForm(){  
-      //console.log("validating form");
-      
       return true;
-
-      /*
-      var asam_vote = $('input[name="lista_asamblea"]:checked').val();
-      var consejo_vote = $('input[name="lista_consejo"]:checked').val();
-
-      console.log("LISTA ASAM",$('input[name="lista_asamblea"]:checked').val());
-      console.log("LISTA CONSEJO",$('input[name="lista_consejo"]:checked').val());
-      if(asam_vote!=undefined && consejo_vote!=undefined){
-        return true;
-      }
-      else{
-       
-            Swal.fire({
-            title: '<strong> LISTA NO SELECCIONADA </strong>',
-            icon: 'info',
-            html:
-                'Es necesario seleccionar alguna opción en las 2 listas para emitir su voto'
-            });
-         
-
-        return false;
-      }*/
-      
     }
 
 </script>
