fixed some bugs and added clean tables votacion y asistencia

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -58,9 +58,9 @@
     <!-- Main content -->
     <section class="content">
 
-      <!--%include dashboard.ejs %--> 
+      <% include dashboard.ejs %> 
       <!-- Default box -->
-
+     
 
 
     </section>
@@ -85,5 +85,10 @@
 <script src="../dist/js/app.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="../dist/js/demo.js"></script>
+<!-- DataTable -->
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+<!-- SweetAlert -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
 </body>
 </html>
