--- a/views/admin/electoral-list.ejs
+++ b/views/admin/electoral-list.ejs
@@ -465,7 +465,7 @@ function Delete(id){
               cache: false,
               async: false
           }).responseText;
-          if(rpta="ok"){
+          if(rpta=="ok"){
             location.reload();
           }
           else{
