--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -30,7 +30,7 @@
                     <h2><strong>Usuario :</strong> <%= name %> </h2> 
                 </div>
                 <input type="hidden" name="id_asistencia" value=<%= id_asistencia %> >
-                <fieldset>
+                <fieldset style="background-color: #ece0e0;">
                     <legend>Emisión de Votación</legend>
                     <h1>ASAMBLEA UNIVERSITARIA</h1>
                     <div class="marcacion-voto" id="lista_asamblea">
@@ -48,7 +48,7 @@
 
                 </fieldset>
 
-                <fieldset>
+                <fieldset style="background-color: #ece9d4;"> 
                     <legend>Emisión de Votación</legend>
                     <h1>CONSEJO DE FACULTAD</h1>
                     <H3> <%= facultad_nombre %> </H3>
