--- a/views/admin/electoral-process.ejs
+++ b/views/admin/electoral-process.ejs
@@ -48,6 +48,7 @@
               <h2 class="modal-title"> EDITAR PROCESO ELECTORAL </h2>
           </div>
 
+
           <div class="modal-body">
               <div class="row">
                   <form method="post" action="/admin/electoral-process-update">
@@ -113,7 +114,15 @@
     <div class="row col-lg-12 col-lg-offset-1">
 
       <div class=" col-lg-10 ">
-        <h1 class="well" align="center">Proceso Electoral</h1>
+        <div align="center" class="d-flex justify-content-center">
+          <h1 class="well" >Proceso Electoral</h1>
+          <!--button class="btn-lg btn-success" disabled> DESACTIVAR PROCESO  </button-->
+          <!--button class="btn-lg btn-primary"> ACTIVAR PROCESO  </button-->
+
+          <button id="deactivate_btn" onclick="activate_process(false)"> DESACTIVAR PROCESO </button>
+          <button id="activate_btn" onclick="activate_process(true)"> ACTIVAR PROCESO </button>
+        </div> 
+
         <!--% let message = ''; %-->
         <% var status; %>
         <% if(status=="error"){%>
@@ -198,7 +207,7 @@
                   <th ><p align="center">Nombre del Proceso</p></th>
                   <th ><p align="center">Apertura</p></th>
                   <th ><p align="center">Cierre</p></th>
-                  <th ><p align="center">Activar</p></th>
+                  <th ><p align="center">Acccion</p></th>
                 </tr>
               </thead>
               <tbody align="center">
@@ -207,10 +216,6 @@
             </table>
           </div>
         </div>   
-
-
-
-
   </div>
   <!-- /.content-wrapper -->
 
@@ -237,6 +242,7 @@
 <script src= "../js/moment-timezone-withdata.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 <script>
+
 
 var allprocesses = [];
 
@@ -267,7 +273,55 @@ $('#date_final').datetimepicker({
 $(document).ready(function() {
     init_dates();
     get_electoral_process();
+    check_activation();
 });
+
+
+function check_activation(){
+  $.get("/admin/electoral-process/verification", function(response, status){
+    //console.log(response);
+    if(response.activo){
+      $('#activate_btn').prop('disabled', true);
+    }else{
+      $('#deactivate_btn').prop('disabled', true);
+    }
+  });
+}
+
+
+
+function activate_process(activo){
+  Swal.fire({
+        title: 'Usted esta a punto activar el proceso de elección',
+        text: "Por favor confirmar la acción",
+        icon: 'warning',
+        showCancelButton: true,
+        reverseButtons: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'SI, CONFIRMAR'
+      }).then((result) => {
+        if (result.value) {              
+          var rpta = $.ajax({
+              type: "POST",
+              dataType: "json",
+              url: "/admin/electoral-process-activate",
+              data: {activo: activo},
+              cache: false,
+              async: false
+          }).responseText;
+          if(rpta=="ok"){
+            location.reload();
+          }
+          else{
+            alert(rpta);
+          }
+        }
+      });
+}
+
+
+
 
 /*
 function GetIdCompany(){
@@ -293,17 +347,15 @@ function TimetoZone(time) {
 function get_electoral_process(){
   
   $.get("/admin/electoral-process/all", function(processes, status){
-    
-
-
+    //console.log(processes);
     var table = $('#table_process');
     //table.find("tbody tr").remove();
     var i=1
     processes.forEach(function (process) {
-        table.append("<tr><td>" + i + "</td><td>" + process.name + "</td><td>"+ process.date_init  +"</td><td>"+ process.date_end+'</td><td><input type="checkbox" checked data-toggle="toggle"></td></tr>');
-        /*table.append("<tr><td>" + i + "</td><td>" + process.nombre + "</td><td>"+ TimetoZone(process.apertura)  +"</td><td>"+ TimetoZone(process.cierre)+"</td><td>"+ 
+        /*table.append("<tr><td>" + i + "</td><td>" + process.name + "</td><td>"+ process.date_init  +"</td><td>"+ process.date_end+'</td><td><input type="checkbox" checked data-toggle="toggle"></td></tr>');*/
+        table.append("<tr><td>" + i + "</td><td>" + process.nombre + "</td><td>"+ TimetoZone(process.apertura)  +"</td><td>"+ TimetoZone(process.cierre)+"</td><td>"+ 
           "<button onclick=call_edit("+i+") class='btn btn-warning mr-3'><i class='fa fa-edit'></i></button>"+"<button onclick=Delete("+process.id_proceso_electoral+") class='btn btn-danger'><i class='fa fa-trash-alt'></i></button>" +"</td></tr>");
-        */
+        
         i++;
     });
     allprocesses = processes;
@@ -341,7 +393,7 @@ function Delete(id){
               cache: false,
               async: false
           }).responseText;
-          if(rpta="ok"){
+          if(rpta=="ok"){
             location.reload();
           }
           else{
@@ -358,6 +410,31 @@ function Delete(id){
 </body>
 </html>
 
+<style>
+
+button {
+  border: 1px solid #0066cc;
+  background-color: #0099cc;
+  color: #ffffff;
+  font-size: large;
+  padding: 5px 10px;
+}
+
+button:hover {
+  border: 1px solid #0099cc;
+  background-color: #00aacc;
+  color: #ffffff;
+  padding: 5px 10px;
+}
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+</style>
 
 
 
