--- a/views/admin/process-type.ejs
+++ b/views/admin/process-type.ejs
@@ -271,7 +271,7 @@ function Delete(id){
               cache: false,
               async: false
           }).responseText;
-          if(rpta="ok"){
+          if(rpta=="ok"){
             location.reload();
           }
           else{
