--- a/views/assistance.ejs
+++ b/views/assistance.ejs
@@ -69,7 +69,7 @@
     function cerrar_sesion(){
         Swal.fire({
         title: 'Cerrar Sesión',
-        text: "¿Esta usted seguro que desea cerrar sesion?",
+        text: "¿Está usted seguro que desea cerrar sesión?",
         icon: 'warning',
         showCancelButton: true,
         reverseButtons: true,
