--- a/views/vote-finish.ejs
+++ b/views/vote-finish.ejs
@@ -34,7 +34,7 @@
                     <legend>Emisión de Votación</legend>
              
                     <div align="center">
-                        <h1> USTED A EMITIDO SU VOTO CORRECTAMENTE</h1>
+                        <h1> USTED HA EMITIDO SU VOTO CORRECTAMENTE</h1>
                     </div>
                 </fieldset>
             </form>
@@ -53,7 +53,7 @@
     function cerrar_sesion(){
         Swal.fire({
         title: 'Cerrar Sesión',
-        text: "¿Esta usted seguro que desea cerrar sesion?",
+        text: "¿Está usted seguro que desea cerrar sesión?",
         icon: 'warning',
         showCancelButton: true,
         reverseButtons: true,
