--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -88,7 +88,7 @@
             title: '<strong> LISTA NO SELECCIONADA </strong>',
             icon: 'info',
             html:
-                'Es necesario seleccionar alguna opción en las 2 listas para emitir su voto'
+                'Es necesario seleccionar alguna opción en las 2 cédulas para emitir su voto'
             });
         return false;
       } 
@@ -97,7 +97,7 @@
     function cerrar_sesion(){
         Swal.fire({
         title: 'Cerrar Sesión',
-        text: "¿Esta usted seguro que desea cerrar sesion?",
+        text: "¿Está usted seguro que desea cerrar sesión?",
         icon: 'warning',
         showCancelButton: true,
         reverseButtons: true,
