--- a/views/vote-confirm.ejs
+++ b/views/vote-confirm.ejs
@@ -78,7 +78,7 @@
     function cerrar_sesion(){
         Swal.fire({
         title: 'Cerrar Sesión',
-        text: "¿Esta usted seguro que desea cerrar sesion?",
+        text: "¿Está usted seguro que desea cerrar sesión?",
         icon: 'warning',
         showCancelButton: true,
         reverseButtons: true,
