--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,11 @@
                 <legend>Identificación del Elector</legend>
                 <div align="center">
                     <a href="/auth/google"><img src="images/login_unsa.png"  class="img-fluid"/></a>
-                </div>	
+                </div>
+                             
+                <div style="font-size: 16px;"> SI USTED NO RECUERDA SU CORREO UNSA POR FAVOR COMUNICARSE A lizardo@unsa.edu.pe o jhuajardo@unsa.edu.pe </div>
+              
+
             </fieldset>
         </form>
         </div>
