--- a/views/no-apertura.ejs
+++ b/views/no-apertura.ejs
@@ -25,8 +25,10 @@
         <form class="formulario" onsubmit="return validateForm()">
             <fieldset>
                 <legend>Sistema de Votacion No Aperturado</legend>
-                <div align="center">
-                    <h1> EL SISTEMA ELECTORAL NO SE ENCUENTRA APERTURADO PARA REALIZAR SU VOTO INGRESE EN EL HORARIO DE 9:00 AM A 11:00 AM DEL DIA 05/06/2020. </h1>
+                <div style="font-size: 16px;">
+                     EL SISTEMA ELECTORAL NO SE ENCUENTRA APERTURADO PARA REALIZAR SU VOTO 
+                        POR FAVOR INGRESE EN EL HORARIO ESTABLECIDO DE 9:00 AM A 11:00 AM DEL 05/06/2020.
+
                 </div>
             </fieldset>
         </form>
