--- a/views/vote-confirm.ejs
+++ b/views/vote-confirm.ejs
@@ -11,7 +11,6 @@
 </head>
 <body>
 
-
     <header>
         <div class="cabecera">
             <a href="/">
@@ -30,8 +29,11 @@
             <div align="center" style="display: inline;">
                 <h2><strong>Usuario :</strong> <%= name %> </h2> 
             </div>
-            <form class="formulario" method="post" action="/confirm-vote" onsubmit="return validateForm()">
-        
+
+            <form class="formulario" method="post" action="/confirm-vote" onsubmit="return validateForm()">       
+                <div id="divMsg" style="display:none;">
+                    <img src="images/loading.gif" id="gif" style="display: block; margin: 0 auto; width: 100px; visibility: hidden;">
+                </div>
                 <input type="hidden" name="id_asistencia" value='<%= data.id_asistencia %>' />
                 <fieldset>
                     <legend>Emisión de Votación</legend>
@@ -60,15 +62,18 @@
                     </div>
 
                 </fieldset>
+                    <div style="padding-top: 20px;"></div>
                     <div align="center">
                         <a href='#' onclick='location.reload(true); return false;'>
                             <button class="boton-accion2" style="background: #c22014;" >CAMBIAR VOTO</button>
                         </a>
-                        <button type="submit" class="boton-accion2" style="background: rgb(13, 129, 17);" >VOTAR</button>
+                        <div style="padding-top: 10px;"></div>
+
+                        <button type="submit" id="btn-votar" class="boton-accion2" style="background: rgb(13, 129, 17);" >VOTAR</button>
                     </div>    
             </form>
 
-        </div>
+        </div-->
     </main>
 </body>
 </html>
@@ -94,7 +99,11 @@
     }
 
     function validateForm(){  
-      return true;
+        
+        $('#btn-votar').attr('disabled','disabled');
+        $('#divMsg').show();
+        $('#gif').css('visibility', 'visible');
+        return true;
     }
 
 </script>
