Padron electoral activo vista lista

--- a/views/admin/include/leftpanel.ejs
+++ b/views/admin/include/leftpanel.ejs
@@ -31,7 +31,7 @@
         <li class="header" align="center" style="color:#3c8dbc; font-size: 14px"> OPCIONES</li>
         <li class="treeview">
         <a href="/admin/panel" id='resume'>
-            <i class="fa fa-chart-line"></i> <span>RESUMEN</span>
+            <i class="fa fa-broom"></i> <span>LIMPIAR SISTEMA</span>
             <span class="pull-right-container">
               <!--i class="fa fa-angle-left pull-right"></i-->
             </span>
