fixed major bug with emailer script

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
         <img src="images/logo-unsa.svg" alt="UNSA" class="logo">
             <div class="titulo">
                 <h1><span class="text-big">Elecciones 2020</span></h1>
+                <!--div id="txt"></div-->
                 <span>Sistema Digital de Votación<b>E-vote</b></span>
             </div>
         </div>
@@ -41,8 +42,26 @@
 </html>
 
 <script>
+    /*
     function validateForm(){
       console.log("validating form");
       return true;
     }
+
+    function startTime() {
+        var today = new Date();
+        var h = today.getHours();
+        var m = today.getMinutes();
+        var s = today.getSeconds();
+        m = checkTime(m);
+        s = checkTime(s);
+        document.getElementById('txt').innerHTML =
+        h + ":" + m + ":" + s;
+        var t = setTimeout(startTime, 500);
+    }
+    function checkTime(i) {
+        if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+        return i;
+    }*/
+
 </script>
