--- a/views/no-apertura.ejs
+++ b/views/no-apertura.ejs
@@ -27,7 +27,7 @@
                 <legend>Sistema de Votacion No Aperturado</legend>
                 <div style="font-size: 16px;">
                      EL SISTEMA ELECTORAL NO SE ENCUENTRA APERTURADO PARA REALIZAR SU VOTO 
-                        POR FAVOR INGRESE EN EL HORARIO ESTABLECIDO DE 9:00 AM A 11:00 AM DEL 05/06/2020.
+                        POR FAVOR INGRESE EN EL HORARIO ESTABLECIDO DE 6:00 PM A 6:30 PM DEL 09/06/2020.
 
                 </div>
             </fieldset>
