--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -32,7 +32,7 @@
                 <input type="hidden" name="id_asistencia" value=<%= id_asistencia %> >
                 <fieldset style="background-color: #edece2;">
                     <legend>Emisión de Votación</legend>
-                    <h1>ASAMBLEA UNIVERSITARIA</h1>
+                    <h1>REPRESENTANTES ASAMBLEA UNIVERSITARIA</h1>
                     <div class="marcacion-voto" id="lista_asamblea">
 
                         
@@ -53,8 +53,8 @@
 
                 <fieldset style="background-color: #fff6ff;"> 
                     <legend>Emisión de Votación</legend>
-                    <h1>CONSEJO DE FACULTAD</h1>
-                    <H3> <%= facultad_nombre %> </H3>
+                    <h1>REPRESENTANTES CONSEJO DE FACULTAD</h1>
+                    <H2> <%= facultad_nombre %> </H2>
                     <input type="hidden" name="facultad_nombre" value='<%= facultad_nombre %>'>
 
                     <div class="marcacion-voto2" id="lista_consejo"> 
