--- a/views/admin/include/header.ejs
+++ b/views/admin/include/header.ejs
@@ -69,7 +69,7 @@
               <!-- Menu Footer-->
               <li class="user-footer" style="background-color: #6ab7ff ">
                 <div align=center >
-                  <a href="/admin/logout" style="background-color:red" class="btn btn-danger btn-flat">HABILITAR PROCESO</a>
+                  <a href="/admin/logout" style="background-color:red" class="btn btn-danger btn-flat">CERRAR SESIÓN</a>
                 </div>
               </li>
             </div>
