--- a/views/admin/include/leftpanel.ejs
+++ b/views/admin/include/leftpanel.ejs
@@ -74,14 +74,34 @@
                 </a>
           </li> 
 
+
           <li class="treeview">
+            <a href="/admin/assistence-report">
+                <i class="fa fa-file-powerpoint"></i> <span> REPORTE ASISTENCIA </span>
+                <span class="pull-right-container">
+                    <!--i class="fa fa-angle-left pull-right"></i-->
+                </span>
+                </a>
+          </li> 
+
+          <li class="treeview">
+            <a href="/admin/votation-report">
+                <i class="fa fa-file-pdf"></i> <span> REPORTE VOTACIÓN </span>
+                <span class="pull-right-container">
+                    <!--i class="fa fa-angle-left pull-right"></i-->
+                </span>
+                </a>
+          </li> 
+
+          <!--li class="treeview">
             <a href="/admin/logout">
                 <i class="fa fa-power-off"></i> <span> CERRAR SESION </span>
                 <span class="pull-right-container">
                    
                 </span>
             </a>
-          </li>
+          </li-->
+
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -129,13 +149,16 @@ data.company_name = "juanito";
   
   $('#name_header1').text(data.username);
   $('#name_header2').text(data.username);
-  $('#name_header_company').text(data.name);
 
   $('#name_panel_left').text(data.username);
   if(data.rol == '0'){
     $('#name_company_panel_left').text('ADMIN');
+    $('#name_header_company').text("ADMIN");
+
   }else{
     $('#name_company_panel_left').text('CONTROLADOR');
+    $('#name_header_company').text("CONTROLADOR");
+
     $('#electoral_process').hide();
     $('#election_type').hide();
   }
