--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                     <a href="/auth/google"><img src="images/login_unsa.png"  class="img-fluid"/></a>
                 </div>
                              
-                <div style="font-size: 16px;"> SI USTED NO RECUERDA SU CORREO UNSA POR FAVOR COMUNICARSE A lizardo@unsa.edu.pe o jhuajardo@unsa.edu.pe </div>
+                <div style="font-size: 16px;"> SI USTED NO RECUERDA SU CORREO UNSA POR FAVOR COMUNICARSE A ouis@unsa.edu.pe </div>
               
 
             </fieldset>
