--- a/views/no-apertura.ejs
+++ b/views/no-apertura.ejs
@@ -24,10 +24,10 @@
         <div class="vertical-center">
         <form class="formulario" onsubmit="return validateForm()">
             <fieldset>
-                <legend>Sistema de Votacion No Aperturado</legend>
+                <legend>Sistema de Votación No Aperturado</legend>
                 <div style="font-size: 16px;">
                      EL SISTEMA ELECTORAL NO SE ENCUENTRA APERTURADO PARA REALIZAR SU VOTO 
-                        POR FAVOR INGRESE EN EL HORARIO ESTABLECIDO DE 6:00 PM A 6:30 PM DEL 09/06/2020.
+                        POR FAVOR INGRESE EN EL HORARIO ESTABLECIDO DE 7:25 PM A 7:45 PM DEL 11/06/2020.
 
                 </div>
             </fieldset>
