--- a/views/admin/assistence-report.ejs
+++ b/views/admin/assistence-report.ejs
@@ -169,7 +169,11 @@ function load_asistencia_departamento_academico(){
       total_asistentes+=parseInt(asistencia.asistentes);
       i++;
     });
-    total_porcentaje = Math.round((total_asistentes*100)/total_habilitados,0); 
+    if(total_asistentes!=0){
+      total_porcentaje = Math.round((total_asistentes*100)/total_habilitados,0); 
+    }else{
+      total_porcentaje =0;
+    }
     table.append("<tr><td>" + "</td><td> TOTAL </td><td>"+ total_habilitados + "</td><td>"+ total_asistentes +"</td><td>"+ total_porcentaje+'%' +"</td></tr>");
     
     table.tableExport({
@@ -198,7 +202,12 @@ $.get("/admin/asistencia-facultad", function(asistencias, status){
     total_asistentes+=parseInt(asistencia.asistentes);
     i++;
   });
-  total_porcentaje = Math.round((total_asistentes*100)/total_habilitados,0); 
+  if(total_asistentes!=0){
+    total_porcentaje = Math.round((total_asistentes*100)/total_habilitados,0); 
+  }else{
+    total_porcentaje =0;
+  }
+
   table.append("<tr><td>" + "</td><td> TOTAL </td><td>"+ total_habilitados + "</td><td>"+ total_asistentes +"</td><td>"+ total_porcentaje+'%' +"</td></tr>");
 
     table.tableExport({
@@ -218,6 +227,7 @@ function load_asistencia_area(){
       var i=1;
       var total_habilitados = 0;
       var total_asistentes = 0;
+      console.log(asistencias);
       asistencias.forEach(function (asistencia) {
         table.append("<tr><td>" + i + "</td><td>" + asistencia.nombre + "</td><td>"+ asistencia.habilitados + "</td><td>"+ asistencia.asistentes +"</td><td>"+ asistencia.porcentaje+'%' +"</td></tr>");
         total_habilitados+=parseInt(asistencia.habilitados);
@@ -225,7 +235,11 @@ function load_asistencia_area(){
         i++;
 
       });
-      total_porcentaje = Math.round((total_asistentes*100)/total_habilitados,0); 
+      if(total_asistentes!=0){
+        total_porcentaje = Math.round((total_asistentes*100)/total_habilitados,0); 
+      }else{
+        total_porcentaje =0;
+      }
       table.append("<tr><td>" + "</td><td> TOTAL </td><td>"+ total_habilitados + "</td><td>"+ total_asistentes +"</td><td>"+ total_porcentaje+'%' +"</td></tr>");
         
 
@@ -335,15 +349,15 @@ $('#cmd').click(function () {
         doc.setFontSize(8)
         for (var i = 1; i <= pageCount; i++) {
           doc.setPage(i)
-          doc.text('Página ' + String(i) + ' de ' + String(pageCount), doc.internal.pageSize.width / 2, doc.internal.pageSize.height - 10, {
+          doc.text('Página ' + String(i) + ' de ' + String(pageCount), doc.internal.pageSize.width / 2 -20, doc.internal.pageSize.height - 10, {
             align: 'center'
           })
         }
       }
       addFooters(doc);
 
-      //doc.save("table.pdf");
-      doc.output('dataurlnewwindow'); 
+      doc.save("Reporte-Asistencia.pdf");
+      //doc.output('dataurlnewwindow'); 
 });
 
 
