--- a/views/assistance.ejs
+++ b/views/assistance.ejs
@@ -39,7 +39,7 @@
         </div>
 
 
-            <form class="formulario" method="post" action="/assistance" onsubmit="return validateForm()">
+            <form class="formulario" id="captchaform" method="post" action="/assistance" onsubmit="return validateForm()">
                 <div align="center" style="display: inline;">
                     <h2><strong>Bienvenido :</strong> <%= name %> </h2> 
                 </div>
@@ -62,8 +62,20 @@
 
 <script>
     function validateForm(){
-      console.log("validating form");
-      return true;
+      var formData = new FormData(document.getElementById("captchaform"))
+      var captchaResponse = formData.get("g-recaptcha-response")
+      
+      if(captchaResponse.length == 0){
+      //reCaptcha not verified
+        console.log("Captcha not responded");	
+	alert("Tiene que marcar el Captcha");
+	return false;
+      }
+      else {
+      //reCaptch verified
+        console.log("validating form");
+        return true;
+      }
     }
 
     function cerrar_sesion(){
